crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__alternate__tests__borderless_full_frames.snap
---
source: crates/thndrs/src/cli/renderer/alternate.rs
expression: rendered
---
normal (80x12):
    Explain the renderer migration.


    Response
    Ratatui now owns the bounded terminal frame.

    test-session

    ❯  Keep the interface quiet

    Complete                              model unavailable · auto · queue 0


narrow (32x9):
    bounded terminal frame.

    test-session

    ❯  Keep the interface
       quiet

    model unavailable · auto


monochrome (48x10):
    Response
    Ratatui now owns the bounded terminal
    frame.

    test-session

    ❯  Keep the interface quiet

    Complete        model unavailable · auto
